index.css
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');

* {
    box-sizing: border-box;
}

html, body {
    margin: 0;
    padding: 0;
    background-color: #0f141a;
    color: #c7ccce;
    font-family: Helvetica;
}

.header{
    background-color: #1b202b;
    font-family: "Playfair Display";
}

.main-header {
    display: flex;
    flex-wrap: wrap;
}

.nav {
    flex-grow: 1;
    text-align: center;
}

.nav ul {
    margin: 0;
    padding: 0;
    height: 100%;
    display: flex;
    justify-content: center;
}

.nav li {
    display: inline;
    height: 100%;
    display: flex;
    padding: 0px 10px;
}

.nav a {
    text-decoration: none;
    color: #c7ccce;
    height: 100%;
    display: flex;
    align-items: center;
    font-size: 1.2em;
}

.nav a:hover {
    border-top: 2px solid #c7ccce;
}

.site-logo {
    margin: 10px;
    height: 30px;
}

.site-logo:hover{
    cursor: pointer;
}

.container {
    max-width: 80%;
    margin: 0 auto;
    padding: 1.5em;
}

.title {
    font-size: 5em;
}

.calculator-container {
    color: black;
    display: flex;
    justify-content: space-around;
    align-items: center;
    margin-top: 5%;
    flex-wrap: wrap;
}

.calculator {
    display: inline-block;
    background-color: #c7ccce;
    width: clamp(300px, 65%, 500px);
    height: 400px;
    margin: 5px;
    border: 5px red solid;
    border-radius: 10px;
}

.calculator-title {
    text-align: center;
    margin: 0px;
    padding: 15px 0px;
    background-color: #b6b9bb;
    border-radius: 5px 5px 0px 0px;
}

.calculator-content {
    padding: 10px 15px;
    font-size: 1.2em;
}

.form-item {
    padding: 2px 0px;
}

.calculator-label {
    display: inline-block;
    width: 30%;
}

.calculator-selector {
    display: inline-block;
    width: 65%;
}

.input, .input:focus {
    height: 30px;
    border-radius: 5px;
    border: 1px black solid;
    font-size: 0.8em;  
    padding: 5px;  
}

.select {
    width: 90%;
}

.time-input {   
    width: 20%;
}

.time-unit {
    width: 5%;
    padding-right: 2%;
}

form {
    margin-bottom: 20px;
}

table {
    border-spacing: 0;
}

thead {
    text-align: left;
    background-color: #b6b9bb;
}

